fixing html content

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="bg-gradient">
     <h1>Content?</h1>
     <p> Hello, thank you for stopping by. Unfortunately, I'm just testing some stuff out so there isn't much to see yet.</p>
     <a href="#"> This link does nothing.</a>
-    <div class="bg-gradient"></div>
+    </div>
 </body>
 
 
